<resources>
    <string name="app_name">entrega-expressa</string>
    <string name="fab">FAB</string>
    <string name="textview">TextView</string>
    <string name="fabDescription">FAB</string>
    <string name="hintName">ID de entrega</string>
    <string name="hintQuantidade">Quantidade</string>
    <string name="hintDataLimite">Data limite</string>
    <string name="dados_da_entrega">Dados da entrega:</string>
    <string name="estado_uf">Estado - UF</string>
    <string name="cidade">Cidade</string>
    <string name="cpf_do_cliente">CPF do cliente</string>
    <string name="nome_do_cliente">Nome do cliente</string>
    <string name="cep">CEP</string>
    <string name="endere_o_de_destino_da_entrega">Endereço de destino da entrega:</string>
    <string name="bairro">Bairro</string>
    <string name="complemento">Complemento</string>
    <string name="n_mero">Número</string>
    <string name="rua">Rua</string>
    <string name="salvar">Salvar</string>
    <string name="empty" />
    <string name="quantidade">Quantidade:</string>
    <string name="id_de_entrega">ID de entrega</string>
    <string name="id">ID:</string>
    <string name="entrega">Entrega:</string>
    <string name="data_limite">Data limite:</string>
    <string name="data_da_entrega">Data da entrega</string>
    <string name="cliente">Cliente:</string>
    <string name="cpf">CPF:</string>
    <string name="endere_o">Endereço:</string>
    <string name="cep2">CEP:</string>
    <string name="estado">Estado:</string>
    <string name="cidade2">Cidade:</string>
    <string name="bairro2">Bairro:</string>
    <string name="rua2">Rua:</string>
    <string name="n_mero2">Número:</string>
    <string name="complemento2">Complemento:</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
</resources>