<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.activity.DeliveryFormActivity">

        <TextView
            android:id="@+id/tvDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/dados_da_entrega" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxNameDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDeliveryForm"
            android:hint="@string/hintName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNameDeliveryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxQuantityDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxNameDeliveryForm"
            android:hint="@string/hintQuantidade"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textQuantityDeliveryForm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxDateDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxQuantityDeliveryForm"
            android:hint="@string/hintDataLimite"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDateDeliveryForm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxClientDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxDateDeliveryForm"
            android:hint="@string/nome_do_cliente"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textClientDeliveryForm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxCpfDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxClientDeliveryForm"
            android:hint="@string/cpf_do_cliente"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textCpfDeliveryForm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvAddressForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/boxCpfDeliveryForm"
            android:text="@string/endere_o_de_destino_da_entrega" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxCepDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressForm"
            android:hint="@string/cep"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textCepDeliveryForm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerUfDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxCepDeliveryForm" />

        <TextView
            android:id="@+id/tvStateDeliveryForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/spinnerUfDeliveryForm"
            android:background="@drawable/text_view_background"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="14sp"
            android:text="@string/estado_uf" />

        <Spinner
            android:id="@+id/spinnerCityDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/spinnerUfDeliveryForm" />

        <TextView
            android:id="@+id/tvCityDeliveryForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/spinnerCityDeliveryForm"
            android:background="@drawable/text_view_background"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:textSize="14sp"
            android:text="@string/cidade" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxNeighborhoodDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCityDeliveryForm"
            android:hint="@string/bairro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNeighborhoodDeliveryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxStreetDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxNeighborhoodDeliveryForm"
            android:hint="@string/rua"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textStreetDeliveryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxNumberDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxStreetDeliveryForm"
            android:hint="@string/n_mero"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNumberDeliveryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxComplementDeliveryForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@id/boxNameDeliveryForm"
            app:layout_constraintStart_toStartOf="@id/boxNameDeliveryForm"
            app:layout_constraintTop_toBottomOf="@+id/boxNumberDeliveryForm"
            android:hint="@string/complemento"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textComplementDeliveryForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btSaveDeliveryForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/salvar"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/boxComplementDeliveryForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btSaveDeliveryForm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>